--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,3 +42,12 @@
   font-size: large;
   font-weight: bold;
 }
+
+.btn-set{
+  background: #03071280;
+  border-radius: 20px;
+  padding: 2rem;
+  font-size: large;
+  font-weight: bold;
+
+}
